<resources>
    <string name="app_name">My Application</string>

    <string name="VIEW_MY_CONTACTS">VIEW MY CONTACTS</string>

    <string name="Edit_profile">Edit profile</string>

    <string name="Go_to">Go to settings and fill out the profile</string>

    <string name="Home_address">Home address</string>

    <string name="Career">Career</string>

    <string name="Name">Lucile Alvarado</string>

    <string name="Settings">Settings</string>

    <string name="Log_out">Log out</string>

    <string name="Lets_get">Let\'s get acquainted</string>

    <string name="Fill_out">Fill out the profile and go to the application!</string>

    <string name="Email">E-mail</string>

    <string name="Pass">Password</string>

    <string name="Remember_me">Remember me</string>

    <string name="Google">GOOGLE</string>

    <string name="or">or</string>

    <string name="Register">REGISTER</string>

    <string name="Term">By clicking Register you agree to our Terms and Conditions</string>

    <string name="Already_have">Already have an account?</string>

    <string name="Sign_in">Sign in</string>

    <string name="passMSG">Password: 6+ chars, Aa–Zz, 0–9</string>
    <string name="emailMSG">Use the correct email format.</string>
    <string name="finalValidationMSG">Invalid email or password.</string>
    <string name="cancel">Cancel</string>
    <string name="contact_has_been_removed">Contact has been removed</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="logo">logo</string>
    <string name="profile">Profile</string>
    <string name="default_name">Garry Earl</string>
    <string name="career">Make-up artist</string>
    <string name="default_address">775 Westminster Avenue APT D5 Brooklyn, NY, 11230</string>
    <string name="message">message</string>
    <string name="your_profile_data" translatable="false">Your profile data</string>
    <string name="mobile_phone" translatable="false">Mobile phone</string>
    <string name="forward" translatable="false">Forward</string>
    <string name="hello" translatable="false">Hello!</string>
    <string name="enter_your_email_and_password_below" translatable="false">Enter your email and password below</string>
    <string name="forgot_your_password" translatable="false">Forgot your password?</string>
    <string name="login" translatable="false">Login</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="don_t_have_account" translatable="false">Don’t have account?</string>
    <string name="add">Add</string>
    <string name="recommendation">Recommendation</string>

</resources>