<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <FrameLayout
        android:layout_width="328dp"
        android:layout_height="58dp"
        android:layout_marginVertical="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/Lets_get"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/Fill_out"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="328dp"
        android:layout_height="200dp"
        android:layout_marginVertical="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="328dp"
            android:layout_height="57dp"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="328dp"
                android:layout_height="57dp"
                android:hint="@string/Email"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="57dp"
            android:background="@color/gray"
            app:passwordToggleEnabled="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passInputLayout"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:boxBackgroundMode="none"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:hint="@string/Pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                app:hintTextColor="@color/gray_dark" />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="124dp"
            android:background="@color/gray" />


        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/Remember_me"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="331dp"
        android:layout_height="221dp"

        android:layout_marginTop="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.myapplication.CustomRegistrationButtonView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:logoImageHeight="20dp"
            app:logoImageWidth="20dp"
            app:registrationBtnBackground="@drawable/google_sign_in_dark_button_background"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="60dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            style="?attr/buttonStyleSmall"
            android:layout_width="328dp"
            android:layout_height="55dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="105dp"
            android:letterSpacing="0.1"
            android:text="@string/Register"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="170dp"
            android:text="@string/Term"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="18dp"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="55dp"
            android:text="@string/Sign_in"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />


        <TextView
            android:layout_width="173dp"
            android:layout_height="18dp"
            android:layout_gravity="bottom|center"
            android:layout_marginEnd="20dp"
            android:text="@string/Already_have"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>