<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Lets_get"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Fill_out"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailHint"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/passHint"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Pass"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passHint"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/emailHint"
        android:layout_width="58dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />


    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="126dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/Remember_me"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/passEditText"
        tools:ignore="TouchTargetSizeCheck" />


    <com.example.myapplication.CustomRegistrationButtonView
        android:id="@+id/customRegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
        app:logoImageHeight="20dp"
        app:logoImageWidth="20dp"
        app:registrationBtnBackground="@drawable/google_sign_in_dark_button_background"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customRegistrationButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        style="?attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:letterSpacing="0.1"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orTextView" />

    <TextView
        android:id="@+id/term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/Term"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Already_have"
        android:textAlignment="center"
        android:textColor="#B2B2B3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/already"
        app:layout_constraintTop_toBottomOf="@id/term" />

</androidx.constraintlayout.widget.ConstraintLayout>